--- a/Orwell/.project
+++ b/Orwell/.project
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>strippedcastle</name>
+			<type>2</type>
+			<locationURI>$%257BPARENT-1-PROJECT_LOC%257D/strippedcastle/src</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
