--- a/Orwell/AndroidManifest.xml
+++ b/Orwell/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:targetSdkVersion="17" />
 
     <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
     </application>
 
 </manifest>
